add fun handleCollisions

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<canvas id="canvas1"></canvas>
+
+<div id="container">
+    <button type="button" id="startBtn" onclick="onClickPlay()"><img src="https://1.bp.blogspot.com/-fVAKH-3TLuo/W5onDDHje0I/AAAAAAAAB4I/q2ooE6GuzQkS80dtw1JILXjFWdfQ3IKkwCLcBGAs/s1600/breaoutplay.png">
+    </button>
+    <canvas id="canvas1"></canvas>
+</div>
 
 <script src="bird.js"></script>
 <script src="particles.js"></script>
